# smart-teachr-test

./: .env  .gitignore  Dockerfile  Dockerfile.local  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml
core/: __init__.py  settings.py
database/: connection.py  ddl.sql  migrate.py  utils.py
modules/: auth.py  components.py  controllers.py  entities.py  helpers.py  models.py  routes.py  storage.py  style.py
pages/: dash_consumer.py  dash_creator.py  dashboard.py  login.py
