[tool.poetry]
name = "smart-teachr-test"
version = "0.1.0"
description = ""
authors = ["tarcisio-melo <melotarcisio@hotmail.com>"]
readme = "README.md"
packages = [{include = "smart_teachr_test"}]

[tool.poetry.dependencies]
python = "^3.10"
nicegui = "^1.3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
